# hera-terminal

./: .gitignore  AGENTS.md  Cargo.toml  HERA_M3_DOGFOOD_FIX_PLAN.md  README.md
crates/terminal-cli/: Cargo.toml  README.md
crates/terminal-cli/benches/: m4_benchmarks.rs
crates/terminal-cli/src/: m4_performance_cli.rs  main.rs
crates/terminal-core/: Cargo.toml  README.md
crates/terminal-core/examples/: headless_embedder.rs
crates/terminal-core/src/: lib.rs  state.rs  vte_adapter.rs
crates/terminal-fixtures/: Cargo.toml  README.md
crates/terminal-fixtures/fixtures/: m5-compatibility.json
crates/terminal-fixtures/fixtures/m3-dogfood/: claude-code-long-session-summary.json  codex-long-session-summary.json  synthetic-shadow.json
crates/terminal-fixtures/fixtures/m4-replay/: alternate-screen.json  basic-shell.json  resize-and-wrap.json
crates/terminal-fixtures/fixtures/m5-replay/: claude-code-session.json  codex-session.json  long-session-100k.json  rapid-output.json
crates/terminal-fixtures/src/: lib.rs  m4_compatibility.rs  m4_evidence.rs  m4_performance.rs  m4_replay.rs  m5_baseline.rs  m5_compatibility.rs  m5_dogfood.rs  m5_evidence.rs  m5_go_no_go.rs  m5_platform.rs  m5_release.rs  m5_replay.rs  m5_security.rs  m6_baseline.rs  m6_exit.rs  m6_hardening.rs  m6_host_evidence.rs
crates/terminal-protocol/: Cargo.toml  README.md
crates/terminal-pty/: Cargo.toml  README.md
crates/terminal-pty/examples/: pty_boundary.rs
crates/terminal-render-model/: Cargo.toml  README.md
docs/: README_FR.md  m3-paneflow-dogfood-report.md  m4-api-and-package-readiness.md  m4-benchmarks-and-memory.md  m4-compatibility-matrix.md  m4-evidence-contract.md  m4-public-proof-report.md  m4-replay-and-dogfood-demo.md  m5-baseline-and-evidence-policy.md  m5-compatibility-matrix.md  m5-compatibility-release-hardening-report.md  m5-platform-runtime-evidence.md  m5-release-and-api-hardening.md  m6-paneflow-controlled-host-replacement-report.md  research-map.md
evidence/m4/: compatibility-matrix.json  evidence-manifest.json  m4-api-audit.json  m4-benchmark-summary.json  m4-memory-profile.json  m4-oss-security-baseline.json  m4-package-readiness.json  m4-performance-report.json  m4-performance-thresholds.json  m4-replay-verification.json  paneflow-dogfood-demo-2026-07-04-ep004.json  paneflow-dogfood-smoke-2026-07-04.json
evidence/m4/replay-event-streams/: basic-shell.jsonl
evidence/m5/: compatibility-matrix.json  evidence-manifest.json  m5-api-audit.json  m5-baseline.json  m5-go-no-go-thresholds.json  m5-package-readiness.json  m5-release-plan.json  m5-replay-verification.json  m5-security-baseline.json  paneflow-shadow-dogfood.json  platform-runtime-evidence.json
evidence/m5/dogfood/: live-gpui-summary-2026-07-07.json
evidence/m6/: ep007-hardening-test-manifest.json  ep2-visible-render-smoke-2026-07-10.json  host-manifest.json  m6-baseline.json  m6-exit-evidence.json  m6-mismatch-classification.json
evidence/m6/run-26ae03f3f7b347ecb10b057af0431fab/: hera-m6-host-run-26ae03f3f7b347ecb10b057af0431fab-pane-74315357f93c4d7fb7783f66ae3d4a82.json  hera-m6-host-run-26ae03f3f7b347ecb10b057af0431fab-pane-8e7c8833bab549dab1c2ad18330b6c0c.json
tasks/: prd-m3-paneflow-dogfood-harness-status.json  prd-m3-paneflow-dogfood-harness.md  prd-m4-public-proof-status.json  prd-m4-public-proof.md  prd-m5-compatibility-release-hardening-status.json  prd-m5-compatibility-release-hardening.md  prd-m6-paneflow-controlled-host-replacement-status.json  prd-m6-paneflow-controlled-host-replacement.md
