[workspace]
members = [
    "crates/terminal-core",
    "crates/terminal-protocol",
    "crates/terminal-render-model",
    "crates/terminal-fixtures",
    "crates/terminal-cli",
    "crates/terminal-pty",
]
default-members = ["crates/terminal-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
terminal-core = { path = "crates/terminal-core", version = "0.1.0" }
terminal-render-model = { path = "crates/terminal-render-model", version = "0.1.0" }
terminal-protocol = { path = "crates/terminal-protocol", version = "0.1.0" }
terminal-fixtures = { path = "crates/terminal-fixtures", version = "0.1.0" }
terminal-pty = { path = "crates/terminal-pty", version = "0.1.0" }
portable-pty = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
toml = "1.1.2"
vte = { version = "0.15.0", default-features = false }
