[package]
name = "terminal-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
terminal-core.workspace = true
terminal-fixtures.workspace = true
terminal-pty.workspace = true

[dev-dependencies]
criterion = "0.7.0"

[features]
live-pty-tests = []

[[bench]]
name = "m4_benchmarks"
harness = false

[lints]
workspace = true
