[package]
name = "terminal-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Debug, replay and evidence command-line tooling for Hera."
license = "MIT OR Apache-2.0"
repository = "https://github.com/arthjean/hera-terminal"
documentation = "https://docs.rs/terminal-cli"
readme = "README.md"
keywords = ["terminal", "cli", "replay", "hera"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
terminal-core.workspace = true
terminal-fixtures.workspace = true
terminal-pty.workspace = true
toml.workspace = true

[dev-dependencies]
criterion = "0.7.0"
sha2.workspace = true

[features]
live-pty-tests = []

[[bench]]
name = "m4_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
]

[lints]
workspace = true
