[package]
name = "terminal-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Fixture, replay and evidence validation utilities for Hera."
license = "MIT OR Apache-2.0"
repository = "https://github.com/arthjean/hera-terminal"
documentation = "https://docs.rs/terminal-fixtures"
readme = "README.md"
keywords = ["terminal", "fixtures", "replay", "hera"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
terminal-core.workspace = true
toml.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
]

[lints]
workspace = true
