[package]
name = "terminal-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Structured protocol and replay types for Hera terminal streams."
license = "MIT OR Apache-2.0"
repository = "https://github.com/arthjean/hera-terminal"
documentation = "https://docs.rs/terminal-protocol"
readme = "README.md"
keywords = ["terminal", "vt", "protocol", "hera"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
]

[lints]
workspace = true
