[package]
name = "terminal-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "PTY runtime boundary for Hera terminal sessions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/arthjean/hera-terminal"
documentation = "https://docs.rs/terminal-pty"
readme = "README.md"
keywords = ["terminal", "pty", "runtime", "hera"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[dependencies]
portable-pty.workspace = true

[dev-dependencies]
anyhow = "1.0"
terminal-core.workspace = true

[features]
live-pty-tests = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
]

[lints]
workspace = true
